force-app/main/default/objects/NotificationWO__e/NotificationWO__e.object-meta.xml
<CustomObject>
    <description>CGI-FSL : Platform Event publié par salesforce pour envoyer les notifications sur Work Order</description>
    <label>NotificationWO</label>
    <pluralLabel>NotificationsWO</pluralLabel>
</CustomObject>