force-app/main/default/objects/NotificationWO__e/fields/fsl_contratKExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_contratKExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;external Id du contrat.</description>
    <label>ContratKExternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>