force-app/main/default/objects/NotificationWO__e/fields/fsl_externalId__c.field-meta.xml
<CustomField>
    <fullName>fsl_externalId__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;ID du Work Order externe utilisé par GC.</description>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>