force-app/main/default/objects/NotificationWO__e/fields/fsl_parentWorkOrderExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_parentWorkOrderExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;external Id la demande parent.</description>
    <label>ParentWorkOrderExternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>