force-app/main/default/objects/NotificationWO__e/fields/fsl_priority__c.field-meta.xml
<CustomField>
    <fullName>fsl_priority__c</fullName>
    <description>CGI - FSL : Ce champs contient la priorité de la demande de rendez-vous.</description>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>