force-app/main/default/objects/NotificationWO__e/fields/fsl_serviceTerritoryExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_serviceTerritoryExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;external Id du territoire.</description>
    <label>ServiceTerritoryExternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>