force-app/main/default/objects/NotificationWO__e/fields/fsl_status__c.field-meta.xml
<CustomField>
    <fullName>fsl_status__c</fullName>
    <description>CGI - FSL : Ce champ contient le statut de Rdv de service</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>