force-app/main/default/objects/NotificationWO__e/fields/fsl_subject__c.field-meta.xml
<CustomField>
    <fullName>fsl_subject__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;objet de la demande de rendez-vous.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>