force-app/main/default/objects/NotificationWO__e/fields/fsl_workTypeExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_workTypeExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;external Id du type d&apos;activité.</description>
    <label>WorkTypeExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>